--- a/app/res/layout/fragment_connect_results_summary_list.xml
+++ b/app/res/layout/fragment_connect_results_summary_list.xml
@@ -1,160 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/deliveries_label"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_large"
-        android:textAlignment="textStart"
-        android:text="@string/connect_results_summary_verifications_title"/>
-
-    <TextView
-        android:id="@+id/single_status_label"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:textAlignment="textStart"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/multi_status_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/delivery_column_earned"
-            android:layout_width="wrap_content"
+            android:id="@+id/deliveries_label"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/delivery_column_approved"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/delivery_column_earned"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/delivery_column_rejected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/delivery_column_approved"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/delivery_column_pending"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/delivery_column_rejected"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center"/>
-
-        <TextView
-            android:id="@+id/delivery_column_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/delivery_column_pending"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/deliveries_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/connect_results_summary_view_deliveries"
-        />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/grey_darker"/>
-
-    <TextView
-        android:id="@+id/payments_label"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_large"
-        android:textAlignment="textStart"
-        android:text="@string/connect_results_summary_payments_title"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/payment_earned_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/payment_transferred_label"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
             android:textStyle="bold"
             android:textSize="@dimen/text_large"
-            android:text="@string/connect_results_summary_earned"/>
+            android:textAlignment="textStart"
+            android:text="@string/connect_results_summary_verifications_title"/>
+
         <TextView
-            android:id="@+id/payment_transferred_label"
-            android:layout_width="wrap_content"
+            android:id="@+id/single_status_label"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/payment_earned_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="10dp"
+            android:textAlignment="textStart"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/multi_status_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/delivery_column_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="10dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/delivery_column_pending"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/delivery_column_rejected"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/delivery_column_rejected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/delivery_column_pending"
+                app:layout_constraintEnd_toStartOf="@id/delivery_column_approved"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/delivery_column_approved"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/delivery_column_rejected"
+                app:layout_constraintEnd_toStartOf="@id/delivery_column_earned"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/delivery_column_earned"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/delivery_column_approved"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textAlignment="center"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/deliveries_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/connect_results_summary_view_deliveries"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/grey_darker"/>
+
+        <TextView
+            android:id="@+id/payments_label"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="20dp"
             android:textStyle="bold"
             android:textSize="@dimen/text_large"
-            android:text="@string/connect_results_summary_transferred"/>
-        <TextView
-            android:id="@+id/payment_earned_amount"
-            android:layout_width="wrap_content"
+            android:textAlignment="textStart"
+            android:text="@string/connect_results_summary_payments_title"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/payment_earned_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/payment_transferred_label"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_large"
+                android:text="@string/connect_results_summary_earned"/>
+            <TextView
+                android:id="@+id/payment_transferred_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/payment_earned_label"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_large"
+                android:text="@string/connect_results_summary_transferred"/>
+            <TextView
+                android:id="@+id/payment_earned_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/payment_earned_label"
+                app:layout_constraintEnd_toEndOf="@id/payment_earned_label"
+                app:layout_constraintTop_toBottomOf="@id/payment_earned_label"
+                android:layout_marginTop="5dp"
+                android:padding="10dp"
+                android:background="@color/grey_light"/>
+            <TextView
+                android:id="@+id/payment_transferred_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/payment_transferred_label"
+                app:layout_constraintEnd_toEndOf="@id/payment_transferred_label"
+                app:layout_constraintTop_toBottomOf="@id/payment_transferred_label"
+                android:layout_marginTop="5dp"
+                android:padding="10dp"
+                android:background="@color/grey_light"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/payments_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/payment_earned_label"
-            app:layout_constraintEnd_toEndOf="@id/payment_earned_label"
-            app:layout_constraintTop_toBottomOf="@id/payment_earned_label"
-            android:layout_marginTop="5dp"
-            android:padding="10dp"
-            android:background="@color/grey_light"/>
-        <TextView
-            android:id="@+id/payment_transferred_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@id/payment_transferred_label"
-            app:layout_constraintEnd_toEndOf="@id/payment_transferred_label"
-            app:layout_constraintTop_toBottomOf="@id/payment_transferred_label"
-            android:layout_marginTop="5dp"
-            android:padding="10dp"
-            android:background="@color/grey_light"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/payments_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/connect_results_summary_view_payments"
-        />
-
-</LinearLayout>
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/connect_results_summary_view_payments"
+            />
+    </LinearLayout>
+</ScrollView>
