--- a/app/res/layout/fragment_connect_jobs_list.xml
+++ b/app/res/layout/fragment_connect_jobs_list.xml
@@ -36,6 +36,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
+        android:visibility="gone"
         >
         <ImageView
             android:id="@+id/connect_secondary_phone_icon"
