--- a/app/res/layout/screen_connect_consent.xml
+++ b/app/res/layout/screen_connect_consent.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/cc_core_bg"
-    android:orientation="vertical"
-    android:layout_marginStart="@dimen/content_start"
-    android:layout_marginEnd="@dimen/content_start">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/connect_consent_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/content_min_margin"
-        android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_largest"
-        android:text="@string/connect_consent_title"/>
-
-    <TextView
-        android:id="@+id/connect_consent_message_1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"
-        android:text="@string/connect_consent_message_1" />
-
-    <TextView
-        android:id="@+id/connect_consent_message_2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/content_min_margin"
-        android:gravity="start"
-        android:textSize="@dimen/text_medium"
-        android:text="@string/connect_consent_message_2" />
-
-    <CheckBox
-        android:id="@+id/connect_consent_check"
+    <LinearLayout
+        android:background="@color/cc_core_bg"
+        android:layout_height="fill_parent"
+        android:layout_marginEnd="@dimen/content_start"
+        android:layout_marginStart="@dimen/content_start"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/connect_consent_check"
-        />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/connect_consent_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start"
-        android:text="@string/connect_consent_button"/>
+        <Button
+            android:id="@+id/connect_consent_button"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:paddingBottom="@dimen/content_start"
+            android:paddingTop="@dimen/content_start"
+            android:text="@string/connect_consent_button" />
 
-</LinearLayout>
+        <CheckBox
+            android:id="@+id/connect_consent_check"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/connect_consent_check" />
+
+        <TextView
+            android:gravity="start"
+            android:id="@+id/connect_consent_message_2"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:layout_width="fill_parent"
+            android:text="@string/connect_consent_message_2"
+            android:textSize="@dimen/text_medium" />
+
+        <TextView
+            android:id="@+id/connect_consent_title"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:layout_width="wrap_content"
+            android:text="@string/connect_consent_title"
+            android:textColor="@color/cc_neutral_color"
+            android:textSize="@dimen/text_largest" />
+
+        <TextView
+            android:gravity="start"
+            android:id="@+id/connect_consent_message_1"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:layout_width="fill_parent"
+            android:text="@string/connect_consent_message_1"
+            android:textSize="@dimen/text_medium" />
+
+    </LinearLayout>
+</layout>
