--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -1,90 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:background="@color/cc_core_bg"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginEnd="@dimen/content_start"
-        android:layout_marginStart="@dimen/content_start"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/connect_verify_title"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_width="wrap_content"
-            android:text="@string/connect_verify_title"
-            android:textAlignment="center"
-            android:textColor="@color/cc_neutral_color"
-            android:textSize="@dimen/text_larger" />
-
-        <TextView
-            android:id="@+id/connect_verify_message"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_width="wrap_content"
-            android:text="@string/connect_verify_message"
-            android:textAlignment="center"
-            android:textColor="@color/cc_neutral_color"
-            android:textSize="@dimen/text_medium" />
+    <ScrollView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
         <LinearLayout
             android:background="@color/cc_core_bg"
-            android:id="@+id/connect_verify_fingerprint_container"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/content_start"
+            android:layout_marginStart="@dimen/content_start"
             android:layout_width="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/connect_verify_fingerprint_icon"
-                android:layout_gravity="center"
-                android:layout_height="90dp"
-                android:layout_width="90dp"
-                android:src="@drawable/fingerprint" />
+            <LinearLayout
+                android:background="@color/cc_core_bg"
+                android:id="@+id/connect_verify_fingerprint_container"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/connect_verify_fingerprint_button"
+                <Button
+                    android:id="@+id/connect_verify_fingerprint_button"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:text="@string/connect_verify_configure_fingerprint" />
+
+                <ImageView
+                    android:id="@+id/connect_verify_fingerprint_icon"
+                    android:layout_gravity="center"
+                    android:layout_height="90dp"
+                    android:layout_width="90dp"
+                    android:src="@drawable/fingerprint" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:background="@color/cc_core_bg"
+                android:id="@+id/connect_verify_pin_container"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/connect_verify_pin_button"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:text="@string/connect_verify_configure_pin" />
+
+                <ImageView
+                    android:id="@+id/connect_verify_pin_icon"
+                    android:layout_gravity="center"
+                    android:layout_height="90dp"
+                    android:layout_width="90dp"
+                    android:src="@drawable/pattern" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/connect_verify_title"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:text="@string/connect_verify_configure_fingerprint" />
-        </LinearLayout>
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:text="@string/connect_verify_title"
+                android:textAlignment="center"
+                android:textColor="@color/cc_neutral_color"
+                android:textSize="@dimen/text_larger" />
 
-        <TextView
-            android:id="@+id/connect_verify_or"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="wrap_content"
-            android:text="@string/choice_or"
-            android:textSize="@dimen/text_medium" />
-
-        <LinearLayout
-            android:background="@color/cc_core_bg"
-            android:id="@+id/connect_verify_pin_container"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/connect_verify_pin_icon"
-                android:layout_gravity="center"
-                android:layout_height="90dp"
-                android:layout_width="90dp"
-                android:src="@drawable/pattern" />
-
-            <Button
-                android:id="@+id/connect_verify_pin_button"
+            <TextView
+                android:id="@+id/connect_verify_or"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:text="@string/connect_verify_configure_pin" />
+                android:layout_margin="@dimen/content_min_margin"
+                android:layout_width="wrap_content"
+                android:text="@string/choice_or"
+                android:textSize="@dimen/text_medium" />
+
+            <TextView
+                android:id="@+id/connect_verify_message"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:text="@string/connect_verify_message"
+                android:textAlignment="center"
+                android:textColor="@color/cc_neutral_color"
+                android:textSize="@dimen/text_medium" />
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+</layout>
