--- a/app/res/layout/screen_connect_message.xml
+++ b/app/res/layout/screen_connect_message.xml
@@ -1,44 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:background="@color/cc_core_bg"
-        android:layout_height="fill_parent"
-        android:layout_marginEnd="@dimen/content_start"
-        android:layout_marginStart="@dimen/content_start"
         android:layout_width="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/connect_message_button"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start" />
-
-        <Button
-            android:id="@+id/connect_message_button2"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:visibility="gone" />
+        android:layout_height="fill_parent"
+        android:background="@color/cc_core_bg"
+        android:orientation="vertical"
+        android:layout_marginStart="@dimen/content_start"
+        android:layout_marginEnd="@dimen/content_start">
 
         <TextView
             android:id="@+id/connect_message_title"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/content_min_margin"
             android:textColor="@color/cc_neutral_color"
             android:textSize="@dimen/text_larger" />
 
         <TextView
-            android:gravity="start"
             android:id="@+id/connect_message_message"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium"/>
+
+        <Button
+            android:id="@+id/connect_message_button"
             android:layout_width="fill_parent"
-            android:textSize="@dimen/text_medium" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/content_start"
+            android:paddingTop="@dimen/content_start" />
+        <Button
+            android:id="@+id/connect_message_button2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/content_start"
+            android:paddingTop="@dimen/content_start"
+            android:visibility="gone"/>
 
     </LinearLayout>
 </layout>
