--- a/app/res/layout/screen_connect_password_verify.xml
+++ b/app/res/layout/screen_connect_password_verify.xml
@@ -1,62 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@color/cc_core_bg"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginEnd="@dimen/content_start"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/cc_core_bg"
+        android:orientation="vertical"
         android:layout_marginStart="@dimen/content_start"
+        android:layout_marginEnd="@dimen/content_start">
+
+    <TextView
+        android:id="@+id/connect_password_verify_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_margin="@dimen/content_min_margin"
+        android:textColor="@color/cc_neutral_color"
+        android:textSize="@dimen/text_larger"
+        android:text="@string/connect_password_verify_title"/>
+
+    <TextView
+        android:id="@+id/connect_password_verify_message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/content_min_margin"
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"
+        android:text="@string/connect_password_verify_message"/>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/connect_password_verify_button"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:text="@string/connect_password_verify_button" />
-
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_password_verify_message"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:text="@string/connect_password_verify_message"
-            android:textSize="@dimen/text_medium" />
-
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_password_verify_forgot"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:text="@string/connect_password_verify_forgot"
-            android:textSize="@dimen/text_medium" />
-
-        <TextView
-            android:id="@+id/connect_password_verify_title"
-            android:layout_gravity="start"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="wrap_content"
-            android:text="@string/connect_password_verify_title"
-            android:textColor="@color/cc_neutral_color"
-            android:textSize="@dimen/text_larger" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="wrap_content"
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/connect_password_verify_input"
             android:layout_width="match_parent"
-            app:passwordToggleEnabled="true">
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="@string/connect_password_verify"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:hint="@string/connect_password_verify"
-                android:id="@+id/connect_password_verify_input"
-                android:inputType="textPassword"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:id="@+id/connect_password_verify_forgot"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/content_min_margin"
+        android:gravity="start"
+        android:textSize="@dimen/text_medium"
+        android:text="@string/connect_password_verify_forgot"/>
 
+    <Button
+        android:id="@+id/connect_password_verify_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/content_start"
+        android:paddingTop="@dimen/content_start"
+        android:text="@string/connect_password_verify_button"/>
     </LinearLayout>
 </layout>
