--- a/app/res/layout/screen_connect_pin.xml
+++ b/app/res/layout/screen_connect_pin.xml
@@ -1,84 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@color/cc_core_bg"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginEnd="@dimen/content_start"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/cc_core_bg"
+        android:orientation="vertical"
         android:layout_marginStart="@dimen/content_start"
-        android:layout_width="match_parent"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/connect_pin_button"
-            android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
-            android:paddingBottom="@dimen/content_start"
-            android:paddingTop="@dimen/content_start"
-            android:text="@string/connect_password_button" />
-
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_pin_message"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:textSize="@dimen/text_medium" />
-
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_pin_error_message"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:textColor="@color/red"
-            android:textSize="@dimen/text_medium" />
-
-        <TextView
-            android:gravity="start"
-            android:id="@+id/connect_pin_verify_forgot"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:layout_width="fill_parent"
-            android:text="@string/connect_pin_verify_forgot"
-            android:textSize="@dimen/text_medium" />
+        android:layout_marginEnd="@dimen/content_start">
 
         <TextView
             android:id="@+id/connect_pin_title"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/content_min_margin"
             android:textColor="@color/cc_neutral_color"
             android:textSize="@dimen/text_largest" />
 
+        <TextView
+            android:id="@+id/connect_pin_message"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/connect_pin_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberPassword"
+
+                android:hint="@string/connect_pin"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/connect_pin_repeat_holder"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
-
             <com.google.android.material.textfield.TextInputEditText
-                android:hint="@string/connect_pin_repeat"
                 android:id="@+id/connect_pin_repeat_input"
-                android:inputType="numberPassword"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent" />
+                android:inputType="numberPassword"
+                android:hint="@string/connect_pin_repeat"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <TextView
+            android:id="@+id/connect_pin_error_message"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            app:passwordToggleEnabled="true">
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium"
+            android:textColor="@color/red"/>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:hint="@string/connect_pin"
-                android:id="@+id/connect_pin_input"
-                android:inputType="numberPassword"
-                android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/connect_pin_verify_forgot"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:gravity="start"
+            android:textSize="@dimen/text_medium"
+            android:text="@string/connect_pin_verify_forgot"/>
 
-                android:layout_width="match_parent" />
-        </com.google.android.material.textfield.TextInputLayout>
+        <Button
+            android:id="@+id/connect_pin_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/content_start"
+            android:paddingTop="@dimen/content_start"
+            android:text="@string/connect_password_button"/>
 
     </LinearLayout>
 </layout>
