CCCT-468 || Login Page Revamp
Set colors and drawable in project

--- a/app/res/values/colors.xml
+++ b/app/res/values/colors.xml
@@ -146,4 +146,10 @@
     <!-- Button colors -->
     <color name="button_primary">#005ab2</color>
     <color name="button_disabled">#d0e3ff</color>
+
+    <!-- New connect colors-->
+    <color name="connect_border_color">#1A3A42C7</color>
+    <color name="connect_dark_blue_color">#3942C7</color>
+    <color name="connect_blue_color">#3A42C7</color>
+    <color name="connect_yellowish_orange_color">#F3B34D</color>
 </resources>
