Fixed some duplicated attr names

--- a/app/res/values/attrs.xml
+++ b/app/res/values/attrs.xml
@@ -52,14 +52,19 @@
     <declare-styleable name="FilePreference">
         <attr name="file_type" format="string" />
     </declare-styleable>
+
+    <!-- New attributes -->
+    <attr name="editTextHintColor" format="color"/>
+    <attr name="editTextHintSize" format="dimension"/>
+
     <declare-styleable name="PhoneInputView">
         <attr name="borderVisible" format="boolean" />
         <attr name="borderColor" format="color" />
         <attr name="borderRadius" format="dimension" />
         <attr name="countryCodeTextColor" format="color" />
         <attr name="countryCodeTextSize" format="dimension" />
-        <attr name="editTextHintColor" format="color" />
-        <attr name="editTextHintSize" format="dimension" />
+        <attr name="editTextHintColor" />
+        <attr name="editTextHintSize" />
         <attr name="editTextColor" format="color" />
         <attr name="editTextSize" format="dimension" />
         <attr name="dividerVisible" format="boolean" />
@@ -107,12 +112,11 @@
         <attr name="editTextDrawableEndPaddingRight" format="dimension"/>
         <attr name="editTextDrawablePadding" format="dimension"/>
 
-        <!-- New attributes -->
         <attr name="editTextText" format="string"/>
-        <attr name="editTextHintColor" format="color"/>
+        <attr name="editTextHintColor" />
         <attr name="editTextTextSize" format="dimension"/>
         <attr name="editTextHint" format="string"/>
-        <attr name="editTextHintSize" format="dimension"/>
+        <attr name="editTextHintSize" />
 
         <!-- New padding attributes -->
         <attr name="editTextPaddingTop" format="dimension" />
